Release notes for xmlBlaster @version@ (http://www.xmlBlaster.org)
 
 o added a new class EncodableData (ClientProperty now extends from it)
  
 o elimintated MsgTopicErrorHandler since used nowere

 o Changed build.xml for C and C++ compilation
   Now the source files are copied to a separate destination
   To build C or C++ do a cleanup first (before you checkout the new code):
     build c-delete
     build cpp-delete
   or remove the outdated msgUtil_CopyByAnt.c and Global_CopyByAnt.cpp files manually

 o C++ client library (Incompatible API change):
   The update() method argument 'content' has changed from
   'void *' to 'const unsigned char *'

 o C++ client library:
   - Added native SOCKET protocol plugin based on the C-client library
   - Fixed command line usage, try 'HelloWorld2 -help'
   - Fixed memory leak for some XmlBlasterExceptions thrown
   - Logging cleanup (switchable xterm colors)
   - Added Global::getCompiler()
   - Fixed LifeTimeManager to have destruction sequence reversed to creation sequence
   - Added map to LifeTimeManager to support registered object lookup by key
   - Bugfix for lexical_cast<double> and lexical_cast<long double>
     which rounded to only 6 digits
   - Added Base64 support for ClientProperty
   - Bugfix: SAX parsers are now thread safe
   - Renamed msgQosData.getForceDestroy() to isForceDestroy()
   - Other minor changes

 o C-client library:
   Fixed to return secretSessionId in update() method
   Fixed to return isOneway in update() method
   Fixed get() return without a match
   Renamed xmlBlasterAccess->userData to userObject to avoid ambiguity

 o C-client library (Incompatible API change):
   - Fixed unSubscribe() and erase() to return now 'QosArr *' instead
     of 'char *'.
   - ping() now wants a third agrument 'xmlBlasterException*'
   See xmlBlaster/demo/c/socket/HelloWorld3.c for a usage example.

 o Renamed build.sh to build. Now on UNIX and Windows the build command is the same,