@@ -1,5 +1,10 @@
 Release notes for xmlBlaster @version@ (http://www.xmlBlaster.org)
  
+ o added XmlScriptInterpreter which can execute xmlBlaster commands from an
+   xml file (in a way similar to ant, maven and jelly)
+
+ o Nested key tags are now allowed inside key
+ 
  o added a new class EncodableData (ClientProperty now extends from it)
   
  o elimintated MsgTopicErrorHandler since used nowere
